# home-work

./: denrogden.py  domashka3_1.py  domashka3_2.py  homework10.py  homework11.py  homework12.py  homework12_1.py  homework12_2.py  homeworkKLASS.py  new_bot.py  requirements.txt  sort.py  sortirovka_potokami.py  students.db  users_fail.json  Новый текстовый документ (2).txt
10-2/django_new_project/: pyproject.toml
10-2/django_new_project/django_new_project/new_prodject/: db.sqlite3  manage.py
10-2/django_new_project/django_new_project/new_prodject/new_prodject/: asgi.py  settings.py  urls.py  wsgi.py
10-2/django_new_project/django_new_project/new_prodject/newapp/: admin.py  conect_to_mongodb.py  forms.py  models.py  urls.py  views.py
10-2/django_new_project/django_new_project/new_prodject/newapp/migrations/: 0001_initial.py  0002_tag_alter_authors_born_date_and_more.py
10-2/django_new_project/django_new_project/new_prodject/newapp/static/newapp/: style.css
10-2/django_new_project/django_new_project/new_prodject/users/: forms.py  urls.py  users.py  views.py
11-2-2/fast_api_app/: main.py  pyproject.toml
11-2-2/fast_api_app/fast_api_app/repository/: contacts_book.py
11-2-2/fast_api_app/fast_api_app/routes/: contacts_book.py
11-2-2/fast_api_app/migrations/: env.py
11-2/fast_api_app/: pyproject.toml
11-2/fast_api_app/fast_api_app/: schemas.py
11-2/fast_api_app/fast_api_app/database/: db.py  models.py
11-2/fast_api_app/fast_api_app/repository/: contacts_book.py
11-2/fast_api_app/migrations/: env.py
11-2/fast_api_app/migrations/versions/: 7cd30dd26759_init.py
12-2-2/jwt_na_fast_api/: pyproject.toml  requirements.txt
12-2-2/jwt_na_fast_api/docs/source/: conf.py  index.rst
12-2-2/jwt_na_fast_api/jwt_na_fast_api/database/: db.py  models.py
12-2-2/jwt_na_fast_api/jwt_na_fast_api/repository/: contacts_book.py  users.py
12-2-2/jwt_na_fast_api/jwt_na_fast_api/routes/: auth.py
12-2-2/jwt_na_fast_api/migrations/versions/: c7b88527920f_init.py
12-2/jwt_na_fast_api/: __init__.py  mail_togo.py  main.py  pyproject.toml  requirements.txt
12-2/jwt_na_fast_api/docs/: jwt_na_fast_api.jwt_na_fast_api.database.rst  jwt_na_fast_api.jwt_na_fast_api.routes.rst  jwt_na_fast_api.jwt_na_fast_api.rst  jwt_na_fast_api.jwt_na_fast_api.services.rst  jwt_na_fast_api.rst  jwt_na_fast_api.tests.rst  modules.rst
12-2/jwt_na_fast_api/docs/source/: conf.py  index.rst
12-2/jwt_na_fast_api/jwt_na_fast_api/: schemas.py
12-2/jwt_na_fast_api/jwt_na_fast_api/database/: db.py  models.py
12-2/jwt_na_fast_api/jwt_na_fast_api/docs/: modules.rst  repository.rst  routes.rst  services.rst
12-2/jwt_na_fast_api/jwt_na_fast_api/repository/: contacts_book.py  users.py
12-2/jwt_na_fast_api/jwt_na_fast_api/routes/: auth.py  contacts_book.py  users.py
12-2/jwt_na_fast_api/jwt_na_fast_api/services/: auth.py  emailtogo.py
12-2/jwt_na_fast_api/migrations/: env.py
12-2/jwt_na_fast_api/migrations/versions/: 20724c64abd6_init10.py  2cd933a9bea4_init7.py  44326b26f3a9_init.py  4d297b51e3f5_init6.py  5a4cd16f3458_init8.py  62845f6de83f_init2.py  85f6c405a3ed_init3.py  92b35911d150_init5.py  c0b99ddb8729_init4.py  cd9c6e2d5648_init8.py
12-2/jwt_na_fast_api/tests/: test_unit_repository_contact_book.py
7-2/tabliici/: Dockerfile  alembic.ini  main.py  models.py  pyproject.toml  requirements.txt  seed.py
7-2/tabliici/alembic/versions/: 5b892abceb2f_init.py
7-2/tabliici/tabliici/: students.db
Data_Science/HomeWork/: 3_2.ipynb  Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb  Hw3.ipynb  hw1.ipynb  pyproject.toml  requirements.txt
Data_Science/HomeWork/.ipynb_checkpoints/: 3_2-checkpoint.ipynb  Hw2.1-checkpoint.ipynb  Hw2.3-checkpoint.ipynb  Hw3-checkpoint.ipynb  hw1-checkpoint.ipynb
Data_Science/HomeWork/hw10/: hw10.1.ipynb  hw10.2.2.ipynb  hw10.2.3.ipynb  hw10.2.ipynb  hw10.ipynb
Data_Science/HomeWork/hw11/: Module_11_1_Recurrent_Neural_Networks.ipynb  Module_11_2_LSTM.ipynb  hw11.ipynb
Data_Science/HomeWork/hw12/: GraphNN.ipynb  Module_12_1_NLP.ipynb  Module_12_2_Transformers.ipynb  hw12.1.ipynb
Data_Science/HomeWork/hw12/.ipynb_checkpoints/: hw12-checkpoint.ipynb
Data_Science/HomeWork/hw2/: Hw2.2.ipynb  Hw2.3.ipynb
Data_Science/HomeWork/hw2/.ipynb_checkpoints/: Hw2.1-checkpoint.ipynb
Data_Science/HomeWork/hw4/: Module_4_1_Classification.ipynb  Module_4_2_Classification_Performance.ipynb  hw4.ipynb
Data_Science/HomeWork/hw4/.ipynb_checkpoints/: hw4-checkpoint.ipynb
Data_Science/HomeWork/hw5/: hw5.ipynb
Data_Science/HomeWork/hw5/.ipynb_checkpoints/: hw5-checkpoint.ipynb
Data_Science/HomeWork/hw6/: hw6.ipynb
Data_Science/HomeWork/hw6/.ipynb_checkpoints/: hw6-checkpoint.ipynb
Data_Science/HomeWork/hw7/: hw7.ipynb  hw7_ipynb_ (1).ipynb
Data_Science/HomeWork/hw7/.ipynb_checkpoints/: hw7-checkpoint.ipynb  hw7_ipynb_ (1)-checkpoint.ipynb
Data_Science/HomeWork/hw8/: Module_8_01_Neural_Networks.ipynb  Module_8_02_Tensorflow_Pytorch.ipynb  hw8.ipynb
Data_Science/HomeWork/hw9/: Module_9_1_Hyperparameter_Optimization.ipynb  Module_9_2_Keras_Examples.ipynb  hw9.ipynb
Data_Science/HomeWork/hw9/my_model/: keras_metadata.pb  saved_model.pb
Data_Science/HomeWork/hw9/my_model/variables/: variables.index
Data_Science/HomeWork/new_project/: Dockerfile2  new.ipynb  new2.ipynb  new3.ipynb  newCNN.ipynb  newVGG16.ipynb  new_rs50.ipynb  opusModel.py  requirements.txt  testModelResult.ipynb  testModelResultDotrenuvan.ipynb  testModelResultDotrenuvan2.ipynb  testModelResult_copy.ipynb
Data_Science/HomeWork/new_project/.ipynb_checkpoints/: testModelResult-checkpoint.ipynb
project_copy/: Dockerfile  pyproject.toml
project_copy/Assistent/: pyproject.toml  requirements.txt  usersbook.pkl
(+389 files in other folders)
