[tool.poetry]
name = "django-new-project"
version = "0.1.0"
description = ""
authors = ["Topsya <topsya1986@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
psycopg2 = "^2.9.8"
pymongo = "^4.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
