[tool.poetry]
name = "fast-api-app"
version = "0.1.0"
description = ""
authors = ["Topsya <topsya1986@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.21"
fastapi = "^0.103.2"
alembic = "^1.12.0"
psycopg2 = "^2.9.9"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.4.2"}
pip = "^23.2.1"
install = "^1.3.5"
sqlalchemy-utils = "^0.41.1"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
