[tool.poetry]
name = "jwt-na-fast-api"
version = "0.1.0"
description = ""
authors = ["Topsya <topsya1986@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.9.3"
psycopg2 = "^2.9.5"
uvicorn = {extras = ["standart"], version = "^0.20.0"}

 
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
fastapi = "^0.103.2"

sqlalchemy = "^2.0.4"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.5"
fastapi-jwt-auth = "^0.5.0"
libgravatar = "^1.0.4"
cloudinary = "1.36.0"
 
pydantic = "2.4.2" 
 
fastapi-mail = "1.4.1"
redis = "^4.5.1"
fastapi-limiter = "^0.1.5"
radis = "^0.14"
pip = "^23.3"
sphinx = "^7.2.6"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
