[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Topsya <topsya1986@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.0.0"
notebook = "^7.0.6"
numpy = "^1.26.2"
pandas = "^2.1.3"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
